welcome.lessons.welcome.bat.bool1.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
var rep = false
rep = (10<a<20) || (10<b<20)
return rep
}